@@ -474,6 +474,10 @@ class IMP_Dynamic_Mailbox extends IMP_Dynamic_Base
             'search_time' => _("Results are %d Minutes Old"),
             'selected' => _("%s selected."),
             'slidertext' => _("Messages %d - %d"),
+            'subscribe_mbox' => _("Subscribe to %s?"),
+            'subscribe_mbox_subfolders' => _("Subscribe to all subfolders of %s?"),
+            'unsubscribe_mbox' => _("Unsubscribe to %s?"),
+            'unsubscribe_mbox_subfolders' => _("Unsubscribe to all subfolders of %s?"),
             'vfolder' => _("Virtual Folder: %s"),
             'vp_empty' => _("There are no messages in this mailbox."),
             'vp_empty_search' => _("No messages matched the search query.")
