@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Add ability to [un]subscribe to all subfolders in dynamic view.
 * [mms] When checking for personal addresses when deciding whether to display images, only check against e-mail field.
 * [mms] Correctly notify dynamic mailbox view if sent-mail mailboxes are created in compose page.
 * [mms] Fix sending group addresses from smartmobile view.
@@ -3174,6 +3175,7 @@
    <date>2013-05-17</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Add ability to [un]subscribe to all subfolders in dynamic view.
 * [mms] When checking for personal addresses when deciding whether to display images, only check against e-mail field.
 * [mms] Correctly notify dynamic mailbox view if sent-mail mailboxes are created in compose page.
 * [mms] Fix sending group addresses from smartmobile view.
