@@ -2,6 +2,7 @@
 v6.1.0-git
 ----------
 
+[mms] Add ability to [un]subscribe to all subfolders in dynamic view.
 [mms] When checking for personal addresses when deciding whether to display
       images, only check against e-mail field.
 [mms] Correctly notify dynamic mailbox view if sent-mail mailboxes are created
